# DiamondScope

./: README.md  app.py  linear_regression_model.pkl  pyproject.toml  regression_features.pkl  scaler_classification.pkl
