[project]
name = "mon-projet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "joblib>=1.5.3",
    "matplotlib>=3.11.0",
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "scikit-learn==1.6.1",
    "seaborn>=0.13.2",
    "streamlit>=1.59.1",
]
